--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,2 @@
 Вкарай схеми на муунгуус за дата моделите в бекенда
-Вкарай кеширане с локалсторидж на данните които са фетчнати и дата на фетчването. При липса на респонз ( или грешка ) вкарай хъртбиит интервал който при получаване на правилен респонз да фетчне всичките данни
-Добави войд на функциите които не връщат нищо :void
-Добави еррор хандлинг функционалнсота от сървиса
+Модифицирай и добави повече функционалности по еррор хандлинг функционалнсота от сървиса
